fixed double scrollbar, images+text

--- a/other.css
+++ b/other.css
@@ -1,12 +1,19 @@
-html,.wrapper{
+html{
 	font-family: 'Lato';
 	margin-right: auto;
 	margin-left: auto;	
 	margin-bottom: 1em;
 	width: 100%;
+	overflow: hidden;
+}
+body{
+	border: 5px solid #9370DB;
+	margin: 0;
+	height: 100%;	
 	overflow: auto;
 }
-img{ border: 1px solid #ccc; margin-bottom: 3%; }
+
+img{ border: 1px solid #ccc; margin-top: 3%; }
 
 a{ text-decoration: none; }
 
@@ -20,15 +27,9 @@ h1{
 }
 p{	margin-bottom: 2%; }
 
-body{
-	border: 5px solid #9370DB;
-	margin: 0;
-}
-
 #right{
 	height: 100%;
 	width: 75.9%;
-	position: relative;
 	float:left;
 }
 .work_sample{
